...
        </div>
      </div>

      <div className={s.tabs}>
        <div className={`${s.tab} ${s.active}`}>
          <Icon name="pin" className="tabIcon" />
          <span>W okolicy</span>
        </div>
        <div className={s.tab}>
          <Icon name="wave" className="tabIcon" />
          <span>Zaczepki</span>
        </div>
        <div className={s.tab}>
          <Icon name="chat" className="tabIcon" />
          <span>Czaty</span>
        </div>
        <div className={s.tab}>
          <Icon name="person" className="tabIcon" />
          <span>Profil</span>
        </div>
      </div>
    </PhoneFrame>
  );
}

