...
          </div>

          <div className={`${s.buttonItem} ${s.buttonItemFull}`}>
            <div className={s.buttonLabel}>Full Width</div>
            <div className={s.buttonRowFull}>
              <div>
                <button className={s.btnFull}>Wyślij link</button>
                <span className={s.stateLabel}>Default</span>
              </div>
              <div>
                <button className={`${s.btnFull} ${s.btnDisabled}`}>Wyślij link</button>
                <span className={s.stateLabel}>Disabled</span>
              </div>
...
